<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhenIsGood</string>
    <string name="action_settings">Settings</string>
    <string name="create_event">Create Event</string>
    <string name="browse_events">Browse Event</string>
    <string name="title_activity_browse_events">BrowseEvents</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_events">CreateEvents</string>
    <string name="title_activity_set_availability">SetAvailability</string>
    <string name="name_set">Name:</string>
    <string name="date_set">Date:</string>
    <string name="end_date_set">End Date:</string>
    <string name="end_time_set">End Time:</string>
    <string name="time_set">Time:</string>
    <string name="custom_set">Custom</string>
    <string name="submit">Submit</string>
    <string name="title_activity_upload_event">UploadEventActivity</string>
    <string name="title_activity_user_response">UserResponseActivity</string>

</resources>
